--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "~1.11.0",
     "mongoose": "^5.2.12",
     "morgan": "^1.9.0",
+    "request": "^2.88.0",
     "serve-favicon": "^2.5.0"
   }
 }
